# omapin

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: release.yml
docs/: architecture.md  manual-test-matrix.md  omarchy-setup.md
scripts/: ommapin-toggle.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: mod.rs  pinboard.rs
src-tauri/src/app/: commands.rs  window.rs
src-tauri/src/dedupe/: service.rs
src-tauri/src/domain/: bookmark.rs
src-tauri/src/infra/: db.rs  migrations.rs
src-tauri/src/queue/: mod.rs  store.rs  worker.rs
src-tauri/src/security/: token_store.rs
src/features/dedupe/: DedupeBanner.tsx
src/features/queue/: QueueStatus.tsx
src/features/quick-add/: QuickAddForm.tsx
src/features/tags/: TagSuggestions.tsx
src/lib/: tauri.ts
src/state/: useBookmarkStore.ts
